# nonebot_plugin_templates

./: README.md  pyproject.toml  templates_render.py
nonebot_plugin_templates/: __init__.py  template_types.py  templates_render.py
nonebot_plugin_templates/templates/: grid.html  menus.html
templates/: cards.html  menus.html
